# XiaoMeng

./: README.md
src/speech/: CMakeLists.txt  package.xml  speech.launch  tts.txt
src/speech/include/: call.bnf  userwords.txt  yushan.bnf
src/speech/scripts/: backup_placement.py  environment_info.py  free_test.py  smach_test.py  speech_core.py
src/speech/src/: sr_online_file_client.cpp  sr_online_file_server.cpp  trial.py  tts_client.cpp  tts_server.cpp
src/speech/src1/: sr_offline_file_client.cpp  sr_offline_file_server.cpp
src/speech/srv/: speech.srv  speech_to_smach.srv
src/speech/tts_record/: Aispeech.py  listen_record.py
src/speech/tts_record/xm_smach/sim_interface/: CMakeLists.txt
src/speech/tts_record/xm_smach/sim_interface/launch/: xm_hw_interface.launch
src/speech/tts_record/xm_smach/sim_interface/launch/full_launch/: whereisthis.launch
src/speech/tts_record/xm_smach/sim_interface/rviz/: full.rviz  whoiswho.rviz
src/speech/tts_record/xm_smach/sim_interface/scene/: shelf_with_object.scene
src/speech/tts_record/xm_smach/sim_interface/src/: base_sim.py
src/xm_arm/: 2
src/xm_arm/xm_arm_bringup/: CMakeLists.txt  README.md  package.xml
src/xm_arm/xm_arm_controller/: CMakeLists.txt  package.xml
src/xm_arm/xm_arm_nav/: CMakeLists.txt  package.xml
src/xm_arm/xm_arm_serial/: CMakeLists.txt  package.xml
src/xm_handsfree/: initial_pose.py
src/xm_msgs/: CMakeLists.txt
src/xm_msgs/srv/: xm_Plat.srv  (+25 more)
src/xm_navigation/: idea.txt  map.pgm
src/xm_smach/: enviroment.sh  hf_hw_ros.cpp
src/xm_vision/: CMakeLists.txt  README.md  package.xml
(+597 files in other folders)
